src/features/todolist/components/CategoryBoardItem/categoryBoardItem.module.css
.categoryBoardItem {
  min-width: 250px;
}

.categoryHeader {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 5px;
  margin-bottom: 10px;
}

.categoryHeader::after {
  position: absolute;
  content: '';
  height: 1.5px;
  top: 100%;
  width: 100%;
  background-color: var(--primary-blue);
}

.headerCategoryInfo {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 10px 0;
  font-size: 18px;
  font-weight: 500;
}

.tasksCount {
  color: var(--primary-blue);
}

.categoryBtns {
  display: flex;
  align-items: center;
}

.categoryOptionsBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 6px;
  background: transparent;
  border: none;
  cursor: pointer;
  border-radius: 5px;
}

.categoryOptionsBtn:hover {
  background-color: var(--accent-color);
  transition: 0.2s background-color ease;
}

.iconWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  color: #000;
}

.iconWrapper svg {
  height: 20px;
  width: 20px;
}

.taskBoard {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.addTaskBtn {
  background: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
  border: 1.5px dashed var(--accent-color);
  border-radius: 5px;
  font-size: 24px;
  padding: 6px;
}

.addTaskBtn:hover {
  background-color: var(--accent-color);
  transition: 0.2s background-color ease;
  cursor: pointer;
}

